--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
     <div class="intro">
       <div class="intro-text">
         <h2>Welcome!</h2>
-        <p>I'm a strategy-oriented professional with a background in business, marketing, and real estate finance, currently pursuing my Master’s in Management at Georgetown University. My experience spans market research, property risk management, and cross-cultural business consulting, with a strong foundation in brand strategy and financial operations. I bring a global perspective from my studies in Milan at Università Bocconi and upcoming global business consulting experience in Singapore, with exposure to projects across real estate, insurance, and education sectors.</p>
+        <p>I'm a strategy-oriented professional with a background in business, marketing, and real estate finance, currently pursuing my Master’s in Management at Georgetown University. My experience spans market research, property risk management, and cross-cultural business consulting, with a strong foundation in brand strategy and financial operations. I bring a global perspective from my studies in Milan at Università Bocconi and global business consulting experience in Singapore, with exposure to projects across real estate, insurance, and education sectors.</p>
       </div>
       <img src="images/headshot.JPG" alt="Valentin Plastino Headshot" />
     </div>
