--- a/experience.html
+++ b/experience.html
@@ -70,16 +70,15 @@
     .grid-row {
       display: flex;
       flex-wrap: wrap;
-      justify-content: space-between;
       gap: 20px;
-      margin-bottom: 30px;
+      justify-content: space-between;
     }
 
     .card {
       background-color: white;
       border-radius: 12px;
       padding: 25px;
-      flex: 1 1 48%;
+      flex: 1 1 calc(50% - 20px);
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.06);
       display: flex;
       flex-direction: column;
@@ -206,9 +205,7 @@
         </div>
         <p>I oversee insurance coverage for a $60 million real estate portfolio, acting as the primary liaison with State Farm. I’ve led claims processes, ensured compliance across hundreds of properties, and helped strengthen the company’s risk management framework over the past three years.</p>
       </div>
-    </div>
 
-    <div class="grid-row">
       <div class="card">
         <div class="card-header">
           <img src="images/Aleph Tech logo.jpg" alt="Aleph Tech Logo" class="logo" />
